# cv_project

./: .env.template  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1ab43be5040e_updated_column_name_of_type.py  21d6a67fe4d7_added_projects_and_association.py  2c7108eaaa88_initial_commit.py  3acbc66ee1f8_added_user_model.py  49d85d713467_added_tool_type.py  7b93b50372cb_first_migration.py  acd7db3a8e62_added_user.py
cv_project/: config.py  database.py  main.py
cv_project/auth/: auth_config.py  manager.py  models.py
cv_project/projects/: models.py
cv_project/stack/: models.py  router.py  schemas.py
